fix: fix the color contrast of form controls in disabled state

--- a/src/Radio/styles/index.less
+++ b/src/Radio/styles/index.less
@@ -105,11 +105,7 @@
     }
 
     .rs-radio.rs-radio-disabled.rs-radio-checked & {
-      opacity: 0.3;
-
-      .high-contrast-mode({
-        opacity: 0.5;
-      });
+      opacity: 0.5;
     }
   }
 
