--- a/src/Rate/styles/index.less
+++ b/src/Rate/styles/index.less
@@ -89,7 +89,7 @@
   }
 
   &-disabled {
-    opacity: 0.3;
+    opacity: 0.5;
     outline: none;
   }
 
