--- a/src/Slider/styles/index.less
+++ b/src/Slider/styles/index.less
@@ -18,7 +18,7 @@
   }
 
   &-disabled {
-    opacity: 0.3;
+    opacity: 0.5;
     cursor: not-allowed;
 
     .rs-slider-bar,
