--- a/src/internals/Picker/styles/index.less
+++ b/src/internals/Picker/styles/index.less
@@ -35,8 +35,17 @@
   }
 
   &-disabled {
-    opacity: @btn-disabled-opacity;
     cursor: not-allowed;
+
+    .rs-picker-toggle-value,
+    .rs-picker-toggle-indicator,
+    .rs-picker-tag-list .rs-tag {
+      color: var(--rs-text-disabled) !important;
+    }
+
+    .rs-picker-value-count{
+      opacity: 0.5;
+    }
   }
 
   &-toggle &-toggle-placeholder {
