--- a/src/styles/color-modes/dark.less
+++ b/src/styles/color-modes/dark.less
@@ -67,7 +67,7 @@
   --rs-text-inverse: var(--rs-gray-800);
   --rs-text-heading-inverse: var(--rs-gray-900);
   --rs-text-active: var(--rs-primary-500);
-  --rs-text-disabled: var(--rs-gray-500);
+  --rs-text-disabled: var(--rs-gray-400);
   --rs-border-primary: var(--rs-gray-600);
   --rs-border-secondary: var(--rs-gray-700);
   --rs-bg-card: var(--rs-gray-800);
