--- a/src/styles/color-modes/light.less
+++ b/src/styles/color-modes/light.less
@@ -73,7 +73,7 @@
   --rs-text-inverse: var(--rs-gray-50);
   --rs-text-heading-inverse: var(--rs-gray-0);
   --rs-text-active: var(--rs-primary-700);
-  --rs-text-disabled: var(--rs-gray-400);
+  --rs-text-disabled: var(--rs-gray-600);
   --rs-text-error: var(--rs-color-red);
   --rs-text-weight-thin: 100;
   --rs-text-weight-light: 300;
@@ -103,7 +103,7 @@
   --rs-btn-default-active-bg: var(--rs-gray-300);
   --rs-btn-default-active-text: var(--rs-gray-900);
   --rs-btn-default-disabled-bg: var(--rs-gray-50);
-  --rs-btn-default-disabled-text: var(--rs-gray-400);
+  --rs-btn-default-disabled-text: var(--rs-gray-600);
   --rs-btn-primary-bg: var(--rs-primary-500);
   --rs-btn-primary-text: var(--rs-gray-0);
   --rs-btn-primary-hover-bg: var(--rs-primary-600);
@@ -288,7 +288,7 @@
   --rs-radio-tile-bg: var(--rs-gray-0);
   --rs-radio-tile-checked-color: var(--rs-primary-500);
   --rs-radio-tile-checked-mark-color: #fff;
-  --rs-radio-tile-checked-disabled-color: var(--rs-primary-100);
+  --rs-radio-tile-checked-disabled-color: var(--rs-primary-200);
   --rs-radio-tile-icon-size: 32px;
 
   // Rate
@@ -301,12 +301,12 @@
   --rs-toggle-loader-ring: rgb(from var(--rs-gray-50) r g b / 30%);
   --rs-toggle-loader-rotor: var(--rs-gray-0);
   --rs-toggle-hover-bg: var(--rs-gray-400);
-  --rs-toggle-disabled-bg: var(--rs-gray-50);
+  --rs-toggle-disabled-bg: var(--rs-gray-200);
   --rs-toggle-disabled-thumb: #fff;
   --rs-toggle-checked-bg: var(--rs-primary-500);
   --rs-toggle-checked-thumb: #fff;
   --rs-toggle-checked-hover-bg: var(--rs-primary-600);
-  --rs-toggle-checked-disabled-bg: var(--rs-primary-100);
+  --rs-toggle-checked-disabled-bg: var(--rs-primary-200);
   --rs-toggle-checked-disabled-thumb: #fff;
 
   // Slider
